--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/happy-avatar.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/cool-avatar.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto+Slab:wght@400;700&display=swap"
       rel="stylesheet"
